k8s/k8s.wildcard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: __BRANCH_NAME__-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'

spec:
  tls:
    - hosts:
        - '*.san-ng.dev'
        - 'san-ng.dev'
      secretName: san-ng-dev-wildcard
  rules:
    - &host_rule
      host: san-ng.dev
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service-master
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip-service-master
              servicePort: 5000
    - host: __BRANCH_NAME__.san-ng.dev
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service-__BRANCH_NAME__
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip-service-__BRANCH_NAME__
              servicePort: 5000
